--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "cordova-ios": "5.1.1",
     "couchdb": "^0.3.8",
     "express": "^4.17.1",
+    "firebase": "^7.0 || ^8.0",
+    "jquery": "^3.6.0",
     "mysql2": "^2.2.5",
     "pg": "^8.7.0",
     "pg-hstore": "^2.3.4",
@@ -38,8 +40,7 @@
     "sqlite3": "^5.0.2",
     "tedious": "^11.4.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2",
-    "firebase": "^7.0 || ^8.0"
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1102.4",
