Mise à jour des routes + installation de nouveaux packages

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~11.2.0",
     "@angular/platform-browser-dynamic": "~11.2.0",
     "@angular/router": "~11.2.0",
+    "@awesome-cordova-plugins/calendar": "^5.43.0",
     "@capacitor/cli": "^3.2.0",
     "@capacitor/core": "^3.2.0",
     "@ionic-native/core": "^5.36.0",
@@ -28,9 +29,11 @@
     "cordova": "^10.0.0",
     "cordova-android": "8.1.0",
     "cordova-ios": "5.1.1",
+    "cordova-plugin-calendar": "^5.1.6",
     "couchdb": "^0.3.8",
     "express": "^4.17.1",
     "firebase": "^7.0 || ^8.0",
+    "ionic2-calendar": "^0.6.9",
     "jquery": "^3.6.0",
     "mysql2": "^2.2.5",
     "pg": "^8.7.0",
