--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@capacitor/cli": "^3.2.0",
     "@capacitor/core": "^3.2.0",
     "@ionic-native/core": "^5.36.0",
+    "@ionic-native/stripe": "^5.36.0",
     "@ionic/angular": "^5.5.2",
     "@ionic/storage-angular": "^3.0.6",
     "cordova": "^10.0.0",
@@ -43,6 +44,7 @@
     "sass": "^1.38.0",
     "sequelize": "^6.6.5",
     "sqlite3": "^5.0.2",
+    "stripe": "^9.11.0",
     "tedious": "^11.4.0",
     "tslib": "^2.0.0",
     "use-query-params": "^1.2.3",
